Add color prop to the <Button />

--- a/src/components/ui/button/button.css
+++ b/src/components/ui/button/button.css
@@ -2,3 +2,11 @@
     box-sizing: border-box;
     width: 100%;
 }
+
+.button_red {
+    background-color: lightcoral;
+}
+
+.button_blue {
+    background-color: lightskyblue;
+}
